
2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* gnucobol.texi: Added docs for CONTENT-LENGTH and CONTENTS-OF
	  intrinsic function extensions

2018-06-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: support VPATH builds with changed sources by stripping
	  possible path from parameters

2018-04-10  Luke Smith <cobcoder@users.sourceforge.net>

	* gnucobol.texi:
	   - replace Alt-Home and Alt-End with toggle functions
	   - doc examples for SELECT ASSIGN
	   - doc more options to extended ACCEPT

2018-03-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: removed all node pointers but the main level as
	  makeinfo handles these correctly,
	  added a menu group for appendices (not in pdf/html)
	* gnucobol.texi: added missing subsection Figurative Constants below
	  section Extended DISPLAY statement

2018-02-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: remove generated includes in target maintainer-clean

2017-10-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: use `` instead of $() - see Bug #437

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: use exported COBC/COBCRUN instead of relying on
	  exported PATH; changed to keep a list of tex-includes

2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: explained use of cob_tidy / cob_stop_run

2017-07-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: added -std=rm and all strict variants,
	  added explanations for -std

2017-04-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: passed GREP from configure to cobcinfo.sh
	* cobcinfo.sh: use GREP from configure, check for working grep -A

2017-02-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* texinfo.tex: moved to ../build_aux
	* Makefile.am, cobcinfo.sh: changes to cater for move of texinfo.tex