@@ -1,4 +1,9 @@
 
+2018-06-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobcinfo.sh: check that executables used actually do work
+	  efore using their output as content for the manual
+
 2018-06-21  Brian Tiffin <btiffin@gnu.org>
 
 	* gnucobol.texi: Added docs for CONTENT-LENGTH and CONTENTS-OF
